--- a/src/styles/UI/_modal.scss
+++ b/src/styles/UI/_modal.scss
@@ -40,6 +40,16 @@
       top: 50px;
       right: 50px;
     }
+
+    @media (max-width: $mobile) {
+      top: 40px;
+      right: 40px;
+    }
+
+    @media (max-width: $mobileSmall) {
+      top: 20px;
+      right: 20px;
+    }
   }
 
   &__wrapper {
@@ -53,6 +63,10 @@
     overflow-y: auto;
     max-height: 100vh;
     -webkit-overflow-scrolling: touch;
+
+    @media (max-width: $mobileSmall) {
+      padding: 32px 20px 18px;
+    }
   }
 }
 
