--- a/src/styles/UI/form/components/_input.scss
+++ b/src/styles/UI/form/components/_input.scss
@@ -5,7 +5,7 @@
   font-size: 16px;
   line-height: 1.6;
   color: $black0;
-  padding: 20px 1px 22px;
+  padding: 33px 1px 8px;
   width: 100%;
   height: 100%;
   border: none;
@@ -17,6 +17,11 @@
   @media (max-width: $tablet) {
     font-size: 14px;
     padding: 29px 1px 10px;
+  }
+
+  @media (max-width: $mobileSmall) {
+    font-size: 11px;
+    padding: 9px 1px 10px;
   }
 }
 
