--- a/src/styles/pages/index/blocks/_hero.scss
+++ b/src/styles/pages/index/blocks/_hero.scss
@@ -8,8 +8,17 @@
     padding-top: 131px;
   }
 
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     min-height: 100vh;
+  }
+
+  @media (max-width: $mobile) {
+    margin-bottom: 90px;
+  }
+
+  @media (max-width: $mobileSmall) {
+    padding-top: 58px;
+    margin-bottom: 55px;
   }
 
   &__img {
@@ -30,6 +39,18 @@
       left: 0px;
     }
 
+    @media (max-width: $mobile) {
+      width: 780px;
+      top: 23px;
+      left: -45px;
+    }
+
+    @media (max-width: $mobileSmall) {
+      width: 502px;
+      top: 23px;
+      left: -91px;
+    }
+
     &-wrapper {
       height: 506px;
       overflow: hidden;
@@ -41,6 +62,14 @@
 
       @media (max-width: $tablet) {
         height: 411px;
+      }
+
+      @media (max-width: $mobile) {
+        height: 510px;
+      }
+
+      @media (max-width: $mobileSmall) {
+        height: 336px;
       }
     }
   }
@@ -56,6 +85,16 @@
 
     @media (max-width: $tablet) {
       margin-top: 30px;
+    }
+
+    @media (max-width: $mobile) {
+      margin-top: 40px;
+      flex-direction: column;
+      align-items: initial;
+    }
+
+    @media (max-width: $mobileSmall) {
+      margin-top: 22px;
     }
 
     &-title {
@@ -77,6 +116,19 @@
         max-width: 255px;
         transform: translate(20px, 5px); //тоже для полного соответствия макету
       }
+
+      @media (max-width: $mobile) {
+        font-size: 26px;
+        max-width: 349px;
+        transform: initial;
+        margin-bottom: 42px;
+      }
+
+      @media (max-width: $mobile) {
+        font-size: 13px;
+        max-width: 175px;
+        margin-bottom: 22px;
+      }
     }
 
     &-figure {
@@ -87,7 +139,11 @@
       }
 
       @media (max-width: $desktopLow) {
-        max-width: 554px;
+        max-width: 54.103vw;
+      }
+
+      @media (max-width: $mobile) {
+        max-width: 688px;
       }
     }
   }
