--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -86,7 +86,7 @@
         width: 38px;
       }
 
-      @media (max-width: $mobileSmall) {
+      @media (max-width: 767px) {
         background-color: $black0;
       }
     }
