--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -120,7 +120,7 @@ button {
     padding: 0 40px;
   }
 
-  @media (max-width: $mobileSmall) {
+  @media (max-width: 767px) {
     padding: 0 20px;
   }
 }
